crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__mask_invite_links_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 2031
expression: response
---
{
  "data": {
    "inviteLinks": {
      "edges": []
    }
  },
  "errors": null
}
