crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_exhausted.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: exhausted_response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "Invalid invite link",
      "path": [
        "redeemInviteLink"
      ]
    }
  ]
}
