crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_invite.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: redeem_response
---
{
  "data": {
    "redeemInviteLink": {
      "capability": "write",
      "capabilityBits": [
        "CatalogRead",
        "JournalRead",
        "JournalAppend",
        "ViewDataPlanePrivateNetworking"
      ],
      "capabilityBundles": [
        "Write"
      ],
      "catalogPrefix": "aliceCo/"
    }
  }
}
