crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_multi_use_again.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 467
expression: redeem_again
---
{
  "data": {
    "redeemInviteLink": {
      "capability": "write",
      "catalogPrefix": "aliceCo/"
    }
  }
}
