crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_no_sso_enforcement.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: bob_open_redeem
---
{
  "data": {
    "redeemInviteLink": {
      "capability": "read",
      "catalogPrefix": "openCo/"
    }
  }
}
