crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_sso_matching.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: alice_redeem
---
{
  "data": {
    "redeemInviteLink": {
      "capability": "write",
      "catalogPrefix": "acmeCo/"
    }
  }
}
