crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_sso_no_identity.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: carol_redeem
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "This organization requires SSO authentication. Please sign in via SSO to redeem this invite.",
      "path": [
        "redeemInviteLink"
      ]
    }
  ]
}
