crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_sso_sub_prefix_allowed.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: alice_sub_prefix
---
{
  "data": {
    "redeemInviteLink": {
      "capability": "read",
      "catalogPrefix": "acmeCo/production/"
    }
  }
}
