crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__redeem_sso_sub_prefix_rejected.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: bob_sub_prefix
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "Tenant acmeCo/ requires SSO authentication. Please sign in with the organization's SSO provider to redeem this invite.",
      "path": [
        "redeemInviteLink"
      ]
    }
  ]
}
